# veil

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.pipeline.yml  release.pipeline.yml
api/: index.html
docs/: api.md  conf.py  index.md  index.rst  requirements.txt  usage.md
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  veil.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  veil.html
docs/_build/html/_modules/: index.html  typing.html  veil.html
docs/_build/html/_modules/veil/: decorators.html
docs/_build/html/_sources/: modules.rst.txt  veil.rst.txt
docs/source/: conf.py  index.rst  modules.rst  veil.rst
search/: search_index.json
tests/: mocks.py  test_decorators.py  test_init.py  utils.py
usage/: index.html
veil/: __init__.py  decorators.py  types.py
